tests/NormalTests/paczka1/fuzzy1/97902137.err
Error in line 12: DSZMbXtK A291 29,77
Error in line 1: q0q A859 8,5
Error in line 16: 93jAn A695 236,7
Error in line 28: GNsulAwwBRo A859 12,3
Error in line 33: GNsulAwwBRo A695 91,7
Error in line 36: GNsulAwwBRo A169 79,83
Error in line 34: GNsulAwwBRo A169 46,4
Error in line 22: DSZMbXtK A291 129,5
